# semantic-query

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  Readme.md  config.ini  docker-compose.yml  pytest.ini  requirements.txt  setup.cfg  setup.cfg.bak  setup.py
config/local/: airflow.cfg  config.ini
dags/: codigo_civil_penal.py  jurisprudencia.py  profiler.py
src/: cli.py  config.py  download_codigo_civil.py  embedding.py  etl.py  ingest.py  query.py  ragagent.py  storage.py
src/frontend/: consultant.py  custom_logger.py
src/ingest_bak.py/: ingest.py
src/ingestion/: README.md  documentspec.py  downloader.py  parser.py  paths.py
src/models/: node.py
src/parser/: parser.py
src/scripts/: download.py  download_codigo_civil.py
src/semantic/: cli.py  consultant.py  main.py  paths.py  ragagent.py  scraper.py
src/semantic_pdf/: Readme.md  cli.py  consultant.py  custom_logger.py  main.py  parser.py  paths.py  setup.cfg  setup.py
src/storage/: adapters.py  chroma_storage.py  graph_storage.py  hybrid_storage.py  transaction_manager.py
src/verdictnet/: cli.py  config.py  embedding.py  etl.py  query.py  ragagent.py
tests/: conftest.py  test_embedding.py  test_node.py  test_parser.py
tests/ingestion/: test_documentspec.py  test_ingest.py  test_parser.py  test_parser_class.py  test_pdf_parser.py
tests/models/: test_node.py
tests/resources/: NNUU.pdd  codigo-civil-spec.json  codigo-civil.html  config.ini
tests/server/: mock_server.py  test_frontend.py
tests/storage/: conftest.py  test_adapter.py  test_chroma_storage.py  test_graph_storage.py  (+2 more)
(+50 files in other folders)
