[metadata]
name = semantic
version = 0.0.1
description = A tool for running semantic queries on Spanish Law
author = Alex Monras
license = MIT

[options]
package_dir=
    =src
packages = find:
install_requires =
    numpy
    pandas
    fastapi
    fitz
    beautifulsoup4
    lxml
    matplotlib
    pyarrow
    PyMuPDF
    wordcloud

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    semantic = cli:main
