[metadata]
name = verdictnet
version = 0.0.1
description = A tool for running semantic queries on Spanish Law
author = Alex Monras
license = MIT

[options]
package_dir=
    =verdictnet
packages = find:
install_requires =
    numpy
    pandas
    fastapi
    fitz
    beautifulsoup4
    lxml
    matplotlib
    pyarrow
    PyMuPDF

[options.package_data]
verdictnet.ingestion =
    resources/*.json
verdictnet.frontend =
    static/css/*
    static/js/*
    templates/*

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    verdictnet = verdictnet.cli:main
